--- a/templates/admin/opencity.html
+++ b/templates/admin/opencity.html
@@ -1,6 +1,39 @@
 {% extends 'admin/welcome.html' %}
+{% load static %}
 {% block admin_welcome %}
-    <div class="col-sm-6">
-            <h1>city Page</h1>
-          </div>
+    <div class="col mb-2">
+    <h1 style="color: maroon;font-size: 30px">City page</h1>
+    <form action="{% url 'city_submit' %}" method="post" enctype="multipart/form-data">
+     {% csrf_token %}
+    <table align="center" width="100%">
+        <tr><th>State Name<select name="sname">{%  for x in state_data %}
+    <option>{{ x.state_name }}</option>{%  endfor %}
+   </select></th><th>City Name<input type="text" required name="cname"></th><th>Photo<input type="file" required name="cphoto"></th><th><button type="submit">Save</button> </th></tr>
+    </table>
+     </form>
+    {% if data %}
+     <table align="center" border="2"  style="padding: 50px" width="1000px" >
+         <tr><th colspan="5" style="font-size: 30px;color: white;background-color: maroon;text-align: center">State Page</th></tr>
+         <tr><th>State Name</th><th>City Name</th><th>City Photo</th><th>Update</th><th>Delete</th></tr>
+   {%  for x in data %}
+
+       <tr><th>{{ x.city_state.state_name }}</th><th>{{ x.city_name}}</th><th><img src="{{ x.city_photo.url}}" width="100" height="100"></th>
+           <th><a href="{% url 'city_update' %}?cid={{ x.city_id }}">update</a></th>
+           <th><a href="{% url 'delete_city' %}?cityid={{ x.city_id }}">delete</a></th>
+       </tr>
+     {% endfor %}
+     </table>
+
+        </div>
+    {% endif %}
+    {% if res %}
+        <form action="{% url 'city_update_process' %}" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+         <table align="center"><tr><th colspan="5" style="font-size: 30px;color: white;background-color: maroon;text-align: center">City Page</th></tr>
+        <tr>
+            <th>City Id<input type="number" value="{{ res.city_id }}" readonly name="cid"></th><th>City Name<input type="text" required name="cuname" value="{{ res.city_name}}"></th><th>Photo<input type="file" required name="cuphoto" value="{{ res.city_photo }}"></th><th><button type="submit">Update</button> </th></tr>
+    </table>
+        </form>
+        </div>
+    {% endif %}
 {% endblock %}
